Improvements, new art & music, project updates!

--- a/animalese-typing.html
+++ b/animalese-typing.html
@@ -28,10 +28,10 @@
 <!-- Section -->
 <section class="project-section">
     <h2>Animalese Typing BetterDiscord Plugin</h2>
-    <p>A plugin for BetterDiscord that emulates Animal Crossing character speech based on what you're currently typing!</p>
-    <b>Language:</b> JavaScript
+    <p>A plugin for <a href="https://betterdiscord.app/" target="_blank">BetterDiscord</a> that emulates Animal Crossing character speech based on what you're currently typing!</p>
+    <u><b>Language:</b></u> JavaScript
     <br>
-    <b>Status:</b> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
+    <u><b>Status:</b></u> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
     <br>
     <div class="button-container">
         <a href="https://github.com/Pseudonym-Tim/BetterDiscordPlugins/blob/main/AnimaleseTyping.plugin.js">
@@ -45,7 +45,7 @@
             </button>
         </a> 
     </div>
-    How to install: Place file in BetterDiscord plugin folder, located at "AppData\Roaming\BetterDiscord\plugins" by default. 
+    <u>Installation:</u> Place file in BetterDiscord plugin folder, located at "AppData\Roaming\BetterDiscord\plugins" by default. 
     <br>To open the plugin folder, you can just do "User Settings" > "BetterDiscord" > "Plugins" > "Open Plugin Folder"
     <br>
     <br>
