--- a/catharsis-reborn.html
+++ b/catharsis-reborn.html
@@ -35,9 +35,9 @@
     <br>For more details, check out the <a href="https://whackjobint.github.io/CatharsisReborn" target="_blank">Catharsis Reborn Website</a>.
     <br>
     <br>
-    <b>Engine:</b> Source Engine C++
+    <u><b>Engine:</b></u> Source Engine C++
     <br>
-    <b>Status:</b> <b style="color: rgb(10, 221, 38);">IN DEVELOPMENT!</b>
+    <u><b>Status:</b></u> <b style="color: rgb(10, 221, 38);">IN DEVELOPMENT!</b>
     <br>  
     <br>
     <div class="project-image-container">
