--- a/dog-petting-simulator.html
+++ b/dog-petting-simulator.html
@@ -28,15 +28,16 @@
 <!-- Section -->
 <section class="project-section">
     <h2>DOG PETTING SIMULATOR</h2>
-    <p>A retro FPS where you break into people's houses and pet their dogs! Inspired by games like Hotline Miami and Wolfenstein 3D!
+    <p>A retro first person shooter where you break into people's houses and pet their dogs! Inspired by games like Hotline Miami and Wolfenstein 3D!
     <br>
     <br>
-    <b>Engine:</b> Unity C#
+    <u><b>Engine:</b></u> Unity C#
     <br>
-    <b>Status:</b> <b style="color: rgb(203, 10, 221);">DEVELOPMENT PAUSED!</b>
+    <u><b>Status:</b></u> <b style="color: rgb(10, 221, 38);">IN DEVELOPMENT!</b>
     <br>
     <div class="project-image-container">
-        <img src="img/projects/dog-petting-simulator/dog-petting-simulator1.png" style="width: 40%;" class="project-image">
+        <img src="img/projects/dog-petting-simulator/dog-petting-simulator-1.png" style="width: 40%;" class="project-image">
+        <img src="img/projects/dog-petting-simulator/dog-petting-simulator-2.png" style="width: 40%;" class="project-image">
     </div>
 </section>
 
