--- a/index.html
+++ b/index.html
@@ -74,6 +74,21 @@
     <h2>Projects</h2>
     <p>A collection of various projects that I have worked on or am currently working on...</p>
     <div class="projects-container">
+        <a href="postal-onslaught.html" class="projects-item">
+            <img src="img/projects/postal-onslaught/project_thumbnail.png" style="max-width: 85%;" alt="POSTAL: Onslaught" class="project-image">
+            <h3>POSTAL: Onslaught</h3>
+            <p>A retro top-down arcade shooter set in the chaotic world of the POSTAL series!</p>
+        </a>
+        <a href="dog-petting-simulator" class="projects-item">
+            <img src="img/projects/dog-petting-simulator/dog-petting-simulator-1.png"  alt="DOG PETTING SIMULATOR" class="project-image">
+            <h3>DOG PETTING SIMULATOR</h3>
+            <p>A retro first person shooter where you break into people's houses and pet their dogs!</p>
+        </a>
+        <a href="taskyr" class="projects-item">
+            <img src="img/projects/taskyr/taskyr-1.PNG" alt="TASKYR" class="project-image">
+            <h3>TASKYR</h3>
+            <p>A simple yet powerful productivity tool designed to help you stay focused and manage your time effectively!</p>
+        </a>
         <a href="catharsis-reborn" class="projects-item">
             <img src="img/projects/catharsis-reborn/project_thumbnail.png" alt="Catharsis Reborn" class="project-image">
             <h3>Catharsis Reborn</h3>
@@ -84,6 +99,21 @@
             <h3>Postal III Ultrapatch</h3>
             <p>An unofficial patch for Postal III that fixes and improves a ton of things, including adding back cut content!</p>
         </a>
+        <a href="betterfpcamera" class="projects-item">
+            <img src="img/projects/betterfpcamera/betterfpcamera.png" alt="BetterFPCamera" class="project-image">
+            <h3>BetterFPCamera</h3>
+            <p>A mod for Vintage Story that enhances first person immersion by introducing a more dynamic and interesting camera!</p>
+        </a>
+        <a href="fancyclouds2D" class="projects-item">
+            <img src="img/projects/fancyclouds2d/fancyclouds2d.png" alt="FancyClouds2D" class="project-image">
+            <h3>FancyClouds2D</h3>
+            <p>A mod for Vintage Story that replaces the game's 3D clouds with a more realistic yet low resolution 2D skybox-based cloud system!</p>
+        </a>
+        <a href="cavetweaks" class="projects-item">
+            <img src="img/projects/cavetweaks/cavetweaks.png" alt="CaveTweaks" class="project-image">
+            <h3>CaveTweaks</h3>
+            <p>A mod for Vintage Story that introduces tweaks to the cave generation system, offering players a more engaging and intricate spelunking experience!</p>
+        </a>
         <a href="rong" class="projects-item">
             <img src="img/projects/rong/project_thumbnail.png" alt="RONG" class="project-image">
             <h3>RONG</h3>
@@ -93,16 +123,6 @@
             <img src="img/projects/meow-miner/meow-miner.png" alt="Meow Miner" class="project-image">
             <h3>Meow Miner</h3>
             <p>An arcade-style game featuring a cat protagonist with a penchant for underground mining</p>
-        </a>
-        <a href="postal-onslaught.html" class="projects-item">
-            <img src="img/projects/postal-onslaught/project_thumbnail.png" style="max-width: 85%;" alt="POSTAL: Onslaught" class="project-image">
-            <h3>POSTAL: Onslaught</h3>
-            <p>A retro top-down arcade shooter set in the chaotic world of the POSTAL series!</p>
-        </a>
-        <a href="dog-petting-simulator" class="projects-item">
-            <img src="img/projects/dog-petting-simulator/project_thumbnail.png" alt="DOG PETTING SIMULATOR" class="project-image">
-            <h3>DOG PETTING SIMULATOR</h3>
-            <p>A retro FPS where you break into people's houses and pet their dogs!</p>
         </a>
         <a href="secrets-of-evermoore" class="projects-item">
             <img src="img/projects/secrets-of-evermoore/secrets-of-evermoore.png" alt="Secrets Of Evermoore" class="project-image">
@@ -119,16 +139,11 @@
             <h3>Unity Sprite Voxellator</h3>
             <p>A tool for the Unity editor that turns sprites into 3D voxel meshes</p>
         </a>
-        <a href="taskyr" class="projects-item">
-            <img src="img/projects/taskyr/taskyr-2.PNG" alt="TASKYR" class="project-image">
-            <h3>TASKYR</h3>
-            <p>A simple yet powerful productivity tool designed to help you stay focused and manage your time effectively!</p>
-        </a>
-        <a href="screenshotter" class="projects-item">
+        <!--<a href="screenshotter" class="projects-item">
             <img src="img/projects/screenshotter/screenshotter.gif" alt="SCREENSHOTTER" class="project-image">
             <h3>SCREENSHOTTER</h3>
             <p>A simple tool to quickly and easily take cropped screenshots!</p>
-        </a>
+        </a>-->
         <a href="p3s-documentation" class="projects-item">
             <img src="img/projects/p3s-documentation/p3-script-documentation.png" alt="Postal3Script Documentation" class="project-image">
             <h3>Postal3Script Documentation</h3>
@@ -145,20 +160,31 @@
 <!-- Music Section -->
 <section id="music" class="section">
     <h2>Music</h2>
-    <p>A selection of music tracks I've created...</p>
-    <!--<div id="now-playing">No music playing</div>-->
+    <p>A selection of music tracks that I've created...</p>
     <div class="music-container">
-        <!--<button class="music-button" onclick="playMusic('music/Absquatulate.mp3', 'Absquatulate', this)">
-            <i class="fas fa-play"></i> Play "Absquatulate"
-        </button>-->
-        <!--<button class="music-button" onclick="playMusic('music/ArtificePredance.mp3', 'Artifice Predance', this)">
-            <i class="fas fa-play"></i> Play "Artifice Predance"
-        </button>-->
+        <button class="music-button" onclick="playMusic('music/Oikeiosis.mp3', 'Oikeiosis', this)">
+            <i class="fas fa-play"></i> Play "Oikeiosis"
+        </button>
         <button class="music-button" onclick="playMusic('music/ANOTHER HIM (remix).mp3', 'ANOTHER HIM (remix)', this)">
             <i class="fas fa-play"></i> Play "ANOTHER HIM (remix)"
         </button>
-        <button class="music-button" onclick="playMusic('music/Duel of Destiny.mp3', 'Duel of Destiny', this)">
+        <button class="music-button" onclick="playMusic('music/ENDBRINGER2.mp3', 'ENDBRINGER', this)">
+            <i class="fas fa-play"></i> Play "ENDBRINGER"
+        </button>
+        <button class="music-button" onclick="playMusic('music/Duel_of_Destiny.mp3', 'Duel of Destiny', this)">
             <i class="fas fa-play"></i> Play "Duel of Destiny"
+        </button>
+        <button class="music-button" onclick="playMusic('music/finale.mp3', 'Final Battle', this)">
+            <i class="fas fa-play"></i> Play "Final Battle"
+        </button>
+        <button class="music-button" onclick="playMusic('music/lluminnaty.mp3', 'lluminnaty', this)">
+            <i class="fas fa-play"></i> Play "lluminnaty"
+        </button>
+        <button class="music-button" onclick="playMusic('music/Whacky Warchief.mp3', 'Whacky Warchief', this)">
+            <i class="fas fa-play"></i> Play "Whacky Warchief"
+        </button>
+        <button class="music-button" onclick="playMusic('music/Down in the mines.mp3', 'Down in the mines', this)">
+            <i class="fas fa-play"></i> Play "Down in the mines"
         </button>
         <button class="music-button" onclick="playMusic('music/Remnants.mp3', 'Remnants', this)">
             <i class="fas fa-play"></i> Play "Remnants"
@@ -166,82 +192,18 @@
         <button class="music-button" onclick="playMusic('music/Lament of the Lost.mp3', 'Lament of the Lost', this)">
             <i class="fas fa-play"></i> Play "Lament of the Lost"
         </button>
-        <button class="music-button" onclick="playMusic('music/CradlingBricks.mp3', 'Cradling Bricks', this)">
-            <i class="fas fa-play"></i> Play "Cradling Bricks"
-        </button>
-        <button class="music-button" onclick="playMusic('music/GRIT.mp3', 'GRIT', this)">
-            <i class="fas fa-play"></i> Play "GRIT"
-        </button>
-        <button class="music-button" onclick="playMusic('music/EleventySeven.mp3', 'EleventySeven', this)">
-            <i class="fas fa-play"></i> Play "EleventySeven"
-        </button>
-        <button class="music-button" onclick="playMusic('music/227MPHANVILTOTHEFACE.mp3', '227 MPH ANVIL TO THE FACE', this)">
-            <i class="fas fa-play"></i> Play "227 MPH ANVIL TO THE FACE"
-        </button>
-        <button class="music-button" onclick="playMusic('music/EndlessElevator.mp3', 'Endless Elevator', this)">
-            <i class="fas fa-play"></i> Play "Endless Elevator"
-        </button>
-        <button class="music-button" onclick="playMusic('music/Oikeiosis.mp3', 'Oikeiosis', this)">
-            <i class="fas fa-play"></i> Play "Oikeiosis"
-        </button>
-        <button class="music-button" onclick="playMusic('music/OmegaTurboDesperationDeluxe.mp3', 'Omega Turbo Desperation Deluxe', this)">
-            <i class="fas fa-play"></i> Play "Omega Turbo Desperation Deluxe"
-        </button>
-        <button class="music-button" onclick="playMusic('music/PainMaunderer.mp3', 'Pain Maunderer', this)">
-            <i class="fas fa-play"></i> Play "Pain Maunderer"
-        </button>
-        <button class="music-button" onclick="playMusic('music/PathOfPerseverance.mp3', 'Path Of Perseverance', this)">
-            <i class="fas fa-play"></i> Play "Path Of Perseverance"
-        </button>
-        <button class="music-button" onclick="playMusic('music/SmoothSailingAhead.mp3', 'Smooth Sailing Ahead', this)">
-            <i class="fas fa-play"></i> Play "Smooth Sailing Ahead"
-        </button>
-        <button class="music-button" onclick="playMusic('music/TemporomandibularAssassination.mp3', 'Temporomandibular Assassination', this)">
-            <i class="fas fa-play"></i> Play "Temporomandibular Assassination"
-        </button>
-        <button class="music-button" onclick="playMusic('music/FloppyDiskDreams.mp3', 'Floppy Disk Dreams', this)">
-            <i class="fas fa-play"></i> Play "Floppy Disk Dreams"
-        </button>
-        <button class="music-button" onclick="playMusic('music/HammerheadLincoln.mp3', 'Hammerhead Lincoln', this)">
-            <i class="fas fa-play"></i> Play "Hammerhead Lincoln"
-        </button>
-       <!--<button class="music-button" onclick="playMusic('music/Encourings.mp3', 'Encourings', this)">
-            <i class="fas fa-play"></i> Play "Encourings"
-        </button>-->
-        <!--<button class="music-button" onclick="playMusic('music/EyesWideShut.mp3', 'Eyes Wide Shut', this)">
-            <i class="fas fa-play"></i> Play "Eyes Wide Shut"
-        </button>-->
-        <button class="music-button" onclick="playMusic('music/lluminnaty.mp3', 'lluminnaty', this)">
-            <i class="fas fa-play"></i> Play "lluminnaty"
-        </button>
-        <button class="music-button" onclick="playMusic('music/MoldyHeadCheese.mp3', 'Moldy Head Cheese', this)">
-            <i class="fas fa-play"></i> Play "Moldy Head Cheese"
-        </button>
-        <!--<button class="music-button" onclick="playMusic('music/Mystery.mp3', 'Mystery', this)">
-            <i class="fas fa-play"></i> Play "Mystery"
-        </button>-->
-        <button class="music-button" onclick="playMusic('music/NOWSYOURCHANCETOBEAREMIX.mp3', 'NOWS YOUR CHANCE TO BE A [[remix]]', this)">
-            <i class="fas fa-play"></i> Play "NOWS YOUR CHANCE TO BE A [[remix]]"
-        </button>
-         <!--<button class="music-button" onclick="playMusic('music/Prentzal.mp3', 'Prentzal', this)">
-            <i class="fas fa-play"></i> Play "Prentzal"
-        </button>
-        <button class="music-button" onclick="playMusic('music/RocketSurgery.mp3', 'Rocket Surgery', this)">
-            <i class="fas fa-play"></i> Play "Rocket Surgery"
-        </button>-->
-        <button class="music-button" onclick="playMusic('music/TheFinalUnderstanding.mp3', 'The Final Understanding', this)">
-            <i class="fas fa-play"></i> Play "The Final Understanding"
+        <button class="music-button" onclick="playMusic('music/My Psychiatrist.mp3', 'My Psychiatrist', this)">
+            <i class="fas fa-play"></i> Play "My Psychiatrist"
         </button>
     </div>
 </section>
-
 
 <!-- Art Section -->
 <section id="art" class="section">
     <h2>Art</h2>
     <p>A collection of artwork, mostly low resolution digital paintings and pixel art...</p>
     <div class="art-container">
-        <a class="art-item">
+        <a class="art-item" target="_blank">
             <img src="img/art/breaking_through.jpg" alt="Breaking Through" class="art-image">
         </a>
         <a class="art-item">
@@ -253,6 +215,9 @@
         <a class="art-item">
             <img src="img/art/worried.jpg" alt="Worried" style="max-width: 85%;" class="art-image">
         </a>
+        <a class="art-item">
+            <img src="img/art/ferret_thingy.png" alt="Ferret" style="max-width: 105%;" class="art-image">
+        </a>
     </div>
 </section>
 
@@ -261,8 +226,8 @@
     <section id="contact">
         <h2>Contact</h2>
         <p>Have any comments or questions? Feel free to reach out!</p>
-        <p>Email: <a href="mailto:pseudotim256@gmail.com">pseudotim256@gmail.com</a>
-        <br>Discord: <a href="https://discordapp.com/users/303267633338253313">pseudonym_tim</a></p>
+        <u><p>Email:</u> <a href="mailto:pseudotim256@gmail.com">pseudotim256@gmail.com</a>
+        <u><br>Discord:</u> <a href="https://discordapp.com/users/303267633338253313">pseudonym_tim</a></p>
     </section>
 </footer>
 
