--- a/p3s-documentation.html
+++ b/p3s-documentation.html
@@ -30,9 +30,9 @@
     <h2>Postal3Script Documentation</h2>
     <p>I helped document an obscure scripting language used in the development of one of the worst games ever made, Postal III....
     <br>If you want to mod Postal III in any meaningful capacity for whatever reason, then it's basically a requirement for you to learn this!</p>
-    <b>Language:</b> YAML, HTML, CSS
+    <u><b>Language:</b></u> YAML, HTML, CSS
     <br>
-    <b>Status:</b> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
+    <u><b>Status:</b></u> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
     <div class="button-container">
         <a href="https://whackjobint.github.io/postal3script/" target="_blank">
             <button class="button">
