--- a/p3s-vscode.html
+++ b/p3s-vscode.html
@@ -29,9 +29,9 @@
 <section class="project-section">
     <h2>Postal3Script Language Support for VSCode</h2>
     <p>Postal3Script (.p3s) language support extension for Visual Studio Code with syntax highlighting and code snippets, written in JSON</p>
-    <b>Language:</b> JSON
+    <u><b>Language:</b></u> JSON
     <br>
-    <b>Status:</b> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
+    <u><b>Status:</b></u> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
     <div class="button-container">
         <a href="https://github.com/Pseudonym-Tim/postal3script_vscode">
             <button class="button">
