--- a/postal-onslaught.html
+++ b/postal-onslaught.html
@@ -36,9 +36,9 @@
     <br> Inspired by Nuclear Throne and arcade games like Robotron: 2084
     <br>
     <br>
-    <b>Engine:</b> Unity C#
+    <u><b>Engine:</b></u> Unity C#
     <br>
-    <b>Status:</b> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
+    <u><b>Status:</b></u> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
     <br>
     <div class="button-container">
         <a href="https://pseudotim.itch.io/postal-onslaught">
@@ -55,7 +55,7 @@
     <br>
     <div class="project-image-container">
         <img src="img/projects/postal-onslaught/cXtbbC.png" style="width: 30%;" class="project-image">
-        <img src="img/projects/postal-onslaught/m8LzyU.png" style="width: 30%;" class="project-image">
+        <img src="img/projects/postal-onslaught/xojkTm.png" style="width: 30%;" class="project-image">
     </div> 
 </section>
 
