--- a/rong.html
+++ b/rong.html
@@ -31,9 +31,9 @@
     <p>An action packed 2D rougelite top-down shooter mixed with elements of games like Breakout and Pinball
     <br>
     <br>
-    <b>Engine:</b> Unity C#
+    <u><b>Engine:</b></u> Unity C#
     <br>
-    <b>Status:</b> <b style="color: rgb(203, 10, 221);">DEVELOPMENT PAUSED!</b>
+    <u><b>Status:</b></u> <b style="color: rgb(203, 10, 221);">DEVELOPMENT HAULTED!</b>
     <br>
     <div class="project-image-container">
         <img src="img/projects/rong/rong1.png" style="width: 65%;" class="project-image">
