--- a/screenshotter.html
+++ b/screenshotter.html
@@ -30,9 +30,9 @@
     <h2>SCREENSHOTTER</h2>
     <p>A simple tool to quickly and easily take cropped screenshots, written in C# using WinForms and the .NET framework...
     <br>Designed to be as lightweight and minimalistic as possible, so it's pretty quick and to the point!</p>
-    <b>Language:</b> C#
+    <u><b>Language:</b></u> C#
     <br>
-    <b>Status:</b> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
+    <u><b>Status:</b></u> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
     <div class="button-container">
         <a href="https://github.com/Pseudonym-Tim/SCREENSHOTTER">
             <button class="button">
