--- a/secrets-of-evermoore.html
+++ b/secrets-of-evermoore.html
@@ -30,9 +30,9 @@
     <h2>Secrets Of Evermoore</h2>
     <p>Originally dubbed "EXCAVATOR" in it's pre-alpha phase, Secrets Of Evermoore is a retro point-and-click dungeon crawler FPS that takes you on a journey through ancient subterranean labyrinths.
     <br>After becoming separated from your archaeological dig team, it's up to you to uncover the hidden secrets and make it out alive.</p>
-    <b>Engine:</b> Unity C#
+    <u><b>Engine:</b></u> Unity C#
     <br>
-    <b>Status:</b> <b style="color: rgb(203, 10, 221);">DEVELOPMENT PAUSED!</b>
+    <u><b>Status:</b></u> <b style="color: rgb(203, 10, 221);">DEVELOPMENT HAULTED!</b>
     <br>
     <br>
     <div class="project-image-container">
