--- a/taskyr.html
+++ b/taskyr.html
@@ -32,9 +32,9 @@
     <br>Developed using C# and WinForms on the .NET framework, TASKYR provides essential features to block distracting programs and websites, allowing you to concentrate on what truly matters.
     <br>
     <br>
-    <b>Language:</b> C#
+    <u><b>Language:</b></u> C#
     <br>
-    <b>Status:</b> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
+    <u><b>Status:</b></u> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
     <div class="button-container">
         <a href="https://github.com/Pseudonym-Tim/TASKYR">
             <button class="button">
@@ -50,7 +50,7 @@
     <br>
     <div class="project-image-container">
         <img src="img/projects/taskyr/taskyr-1.PNG" style="width: 35%;" class="project-image">
-        <img src="img/projects/taskyr/taskyr-2.PNG" style="width: 35%;" class="project-image">
+        <img src="img/projects/taskyr/taskyr-2.PNG" style="width: 45%;" class="project-image">
     </div>
 </section>
 
