--- a/unity-sprite-voxellator.html
+++ b/unity-sprite-voxellator.html
@@ -31,9 +31,9 @@
     <p>A tool for the Unity editor that turns sprites into 3D voxel meshes.
     <br>Supports greyscale pixel extrusion mapping and boasts various options and features. Inspired by a very similar tool called <a href="https://kenney.nl/tools/kenney-shape">KenneyShape</a>.
     <br>I originally created this tool to generate 3D model representations of weapons on the player HUD for <a href="rong" target="_blank">RONG</a>, one of my game projects!</p>
-    <b>Language:</b> Unity C#
+    <u><b>Language:</b></u> Unity C#
     <br>
-    <b>Status:</b> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
+    <u><b>Status:</b></u> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
     <br>
     <div class="button-container">
         <a href="https://github.com/Pseudonym-Tim/Unity-Sprite-Voxellator" target="_blank">
@@ -47,7 +47,7 @@
             </button>
         </a> 
     </div>
-    How to install: Unzip into your Unity assets folder!
+    <u>Installation:</u> Unzip into your Unity assets folder!
     <br>
     <br>
     <div class="project-image-container">
