--- a/blog.html
+++ b/blog.html
@@ -30,10 +30,10 @@
     <p>Technical ramblings, project updates, horrible opinions, and a shocking lack of pie recipes...</p>
    <div class="blog-container">
         <div class="blog-item">
-            <h3>Building Procedural Levels in POSTAL: Onslaught</h3>
-            <p class="blog-meta">Posted on September 27, 2024</p>
-            <p>An in-depth look at the custom scripting language I developed for procedural level generation in POSTAL: Onslaught, a game jam entry inspired by the POSTAL series!</p>
-            <p><a href="blogs/blog-(9-27-2024)">Read more...</a></p>
+            <u><h3>Building Procedural Levels in POSTAL: Onslaught</h3></u>
+            <i><p class="blog-meta"><u>Date:</u> September 27th, 2024</p></i>
+            <p>An in-depth look at the custom scripting language that I developed for procedural level generation in POSTAL: Onslaught, a game jam entry inspired by the POSTAL series!</p>
+            <p><a href="blogs/blog-(9-27-2024)"><i class="fa-solid fa-book"></i> Read blog...</a></p>
         </div>
     </div>
 </section>
