--- a/fancyclouds2d.html
+++ b/fancyclouds2d.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meow Miner - Pseudonym_Tim</title>
+    <title>FancyClouds2D - Pseudonym_Tim</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
@@ -27,16 +27,29 @@
 
 <!-- Section -->
 <section class="project-section">
-    <h2>Meow Miner</h2>
-    <p>An arcade-style game featuring a cat protagonist with a penchant for underground mining!
+    <h2>FancyClouds2D</h2>
+    <p>A mod for <a href="https://www.vintagestory.at/" target="_blank">Vintage Story</a> that replaces the game's 3D clouds with a more realistic yet low resolution 2D skybox-based cloud system!
     <br>
     <br>
-    <u><b>Engine:</b></u> Unity C#
+    <u><b>Language:</b></u> C#
     <br>
-    <u><b>Status:</b></u> <b style="color: rgb(203, 10, 221);">DEVELOPMENT HAULTED!</b>
+    <u><b>Status:</b></u> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
+    <br>
+    <div class="button-container">
+        <a href="https://github.com/Pseudonym-Tim/FancyClouds2D">
+            <button class="button">
+                <i class="fab fa-github"></i> View On Github
+            </button>
+        </a> 
+        <a href="https://mods.vintagestory.at/fancycloudstwodimensional">
+            <button class="button">
+                <i class="fa fa-gear"></i> View On VSModDB
+            </button>
+        </a> 
+    </div>
     <br>
     <div class="project-image-container">
-        <img src="img/projects/meow-miner/meow-miner.png" style="width: 40%;" class="project-image">
+        <img src="img/projects/fancyclouds2d/fancyclouds2d.png" style="width: 45%;" class="project-image">
     </div>
 </section>
 
