--- a/postal-iii-ultrapatch.html
+++ b/postal-iii-ultrapatch.html
@@ -31,9 +31,11 @@
     <p>An unofficial patch for Postal III that fixes and improves a ton of things, including adding back cut content, making the game much more bearable to play!
     <br>
     Now featuring over 150+ different fixes, additions, and gameplay improvements!</p>
-    <b>Engine:</b> Source Engine C++
+    <u><b>Engine:</b></u> Source Engine C++
     <br>
-    <b>Status:</b> <b style="color: rgb(10, 221, 38);">RELEASED v1.2.0!</b>
+    <u><b>Status:</b></u> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
+    <br> 
+    <br>
     <div class="button-container">
         <a href="https://www.moddb.com/mods/postal-iii-ultrapatch">
             <button class="button">
@@ -46,7 +48,6 @@
             </button>
         </a> 
     </div>
-    <br>
     <br>
     <div class="project-image-container">
         <img src="img/projects/postal-iii-ultrapatch/project_thumbnail.png" style="width: 25%;" class="project-image">
