--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <h3>BetterFPCamera</h3>
             <p>A mod for Vintage Story that enhances first person immersion by introducing a more dynamic and interesting camera!</p>
         </a>
-        <a href="fancyclouds2D" class="projects-item">
+        <a href="fancyclouds2d" class="projects-item">
             <img src="img/projects/fancyclouds2d/fancyclouds2d.png" alt="FancyClouds2D" class="project-image">
             <h3>FancyClouds2D</h3>
             <p>A mod for Vintage Story that replaces the game's 3D clouds with a more realistic yet low resolution 2D skybox-based cloud system!</p>
