--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
             <h3>Secrets Of Evermoore</h3>
             <p>A retro point-and-click dungeon crawler FPS that takes you on a journey through ancient subterranean labyrinths</p>
         </a>
-        <a href="animalese-typing" class="projects-item">
+        <!--<a href="animalese-typing" class="projects-item">
             <img src="img/projects/animalese-typing-betterdiscord-plugin/animalese-typing-betterdiscord-plugin.png" alt="Animalese Typing BetterDiscord Plugin" class="project-image">
             <h3>Animalese Typing BetterDiscord Plugin</h3>
             <p>A plugin for BetterDiscord that emulates Animal Crossing character speech based on what you're currently typing!</p>
-        </a>
+        </a>-->
         <a href="unity-sprite-voxellator" class="projects-item">
             <img src="img/projects/unity-sprite-voxellator/unity-sprite-voxellator.png" alt="Unity Sprite Voxellator" class="project-image">
             <h3>Unity Sprite Voxellator</h3>
