New blog post! General blog improvements...

--- a/blogs/blog-(9-27-2024).html
+++ b/blogs/blog-(9-27-2024).html
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-
     <!-- Navigation Bar -->
     <div class="navbar">
         <a href="index" class="username">Pseudonym_Tim</a>
@@ -34,8 +33,8 @@
     </div>
 
     <div class="blog-info">
-        <h1>Building Procedural Levels in POSTAL: Onslaught</h1>
-        <p class="date">Posted on: September 27, 2024</p>
+        <h1><u>Building Procedural Levels in POSTAL: Onslaught</u></h1>
+        <u><p class="date">Posted on: September 27, 2024</p></u>
     </div>
 
     <main>
