Quick blog page date update...

--- a/blogs/blog-(3-20-2025).html
+++ b/blogs/blog-(3-20-2025).html
@@ -34,7 +34,7 @@
 
     <div class="blog-info">
         <h1><u>Golf is Barely a Sport, and Mario Golf Proved It</u></h1>
-        <u><p class="date">Posted on: March 20, 2025</p></u>
+        <u><p class="date">Posted on: March 20th, 2025</p></u>
     </div>
 
     <main>
