--- a/blogs/blog-(9-27-2024).html
+++ b/blogs/blog-(9-27-2024).html
@@ -34,7 +34,7 @@
 
     <div class="blog-info">
         <h1><u>Building Procedural Levels in POSTAL: Onslaught</u></h1>
-        <u><p class="date">Posted on: September 27, 2024</p></u>
+        <u><p class="date">Posted on: September 27th, 2024</p></u>
     </div>
 
     <main>
