Added PYXLPUSHER and BYTEBEATER projects...

--- a/animalese-typing.html
+++ b/animalese-typing.html
@@ -36,12 +36,12 @@
     <div class="button-container">
         <a href="https://github.com/Pseudonym-Tim/BetterDiscordPlugins/blob/main/AnimaleseTyping.plugin.js">
             <button class="button">
-                <i class="fab fa-github"></i> View On Github
+                <i class="fab fa-github"></i> View On Github...
             </button>
         </a> 
         <a href="downloads/AnimaleseTyping.plugin.js" download="">
             <button class="button">
-                <i class="fa fa-download"></i> Download
+                <i class="fa fa-download"></i> Download!
             </button>
         </a> 
     </div>
