--- a/bytebeater.html
+++ b/bytebeater.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SCREENSHOTTER - Pseudonym_Tim</title>
+    <title>BYTEBEATER - Pseudonym_Tim</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
@@ -27,27 +27,26 @@
 
 <!-- Section -->
 <section class="project-section">
-    <h2>SCREENSHOTTER</h2>
-    <p>A simple tool to quickly and easily take cropped screenshots, written in C# using WinForms and the .NET framework...
-    <br>Designed to be as lightweight and minimalistic as possible, so it's pretty quick and to the point!</p>
-    <u><b>Language:</b></u> C#
+    <h2>BYTEBEATER</h2>
+    <p>A bytebeat interpreter and music creation program that allows you to make some sick chiptune tracks!</p>
+    <u><b>Language:</b></u> Electron.js, HTML, CSS
     <br>
-    <u><b>Status:</b></u> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
+    <u><b>Status:</b></u> <b style="color: rgb(10, 221, 38);">RELEASED! v1.0</b>
     <div class="button-container">
-        <a href="https://github.com/Pseudonym-Tim/SCREENSHOTTER">
+        <a href="https://github.com/Pseudonym-Tim/BYTEBEATER">
             <button class="button">
                 <i class="fab fa-github"></i> View On Github...
             </button>
         </a> 
-        <a href="https://github.com/Pseudonym-Tim/SCREENSHOTTER/releases/latest/download/SCREENSHOTTER.exe">
+        <!-- <a href="https://github.com/Pseudonym-Tim/postal3script_vscode">
             <button class="button">
                 <i class="fa fa-download"></i> Download!
             </button>
-        </a> 
+        </a> -->
     </div>
     <br>
     <div class="project-image-container">
-        <img src="img/projects/screenshotter/screenshotter.gif" style="width: 25%;" class="project-image">
+        <img src="img/projects/bytebeater/bytebeater-1.png" style="width: 50%;" class="project-image">
     </div>
 </section>
 
