--- a/cavetweaks.html
+++ b/cavetweaks.html
@@ -38,12 +38,12 @@
     <div class="button-container">
         <a href="https://github.com/Pseudonym-Tim/CaveTweaks">
             <button class="button">
-                <i class="fab fa-github"></i> View On Github
+                <i class="fab fa-github"></i> View On Github...
             </button>
         </a> 
         <a href="https://mods.vintagestory.at/cavetweaks">
             <button class="button">
-                <i class="fa fa-gear"></i> View On VSModDB
+                <i class="fa fa-gear"></i> View On VSModDB!
             </button>
         </a> 
     </div>
