--- a/index.html
+++ b/index.html
@@ -89,6 +89,16 @@
             <h3>TASKYR</h3>
             <p>A simple yet powerful productivity tool designed to help you stay focused and manage your time effectively!</p>
         </a>
+        <a href="pyxlpusher" class="projects-item">
+            <img src="img/projects/pyxlpusher/pyxlpusher-2.png" alt="PYXLPUSHER" class="project-image">
+            <h3>PYXLPUSHER</h3>
+            <p>An intuitive pixel art editor for creating retro-style masterpieces!</p>
+        </a>
+        <a href="bytebeater" class="projects-item">
+            <img src="img/projects/bytebeater/bytebeater-1.png" alt="BYTEBEATER" class="project-image">
+            <h3>BYTEBEATER</h3>
+            <p>A bytebeat interpreter and music creation program that allows you to make some sick chiptune tracks!</p>
+        </a>
         <a href="catharsis-reborn" class="projects-item">
             <img src="img/projects/catharsis-reborn/project_thumbnail.png" alt="Catharsis Reborn" class="project-image">
             <h3>Catharsis Reborn</h3>
@@ -144,11 +154,11 @@
             <h3>SCREENSHOTTER</h3>
             <p>A simple tool to quickly and easily take cropped screenshots!</p>
         </a>-->
-        <a href="p3s-documentation" class="projects-item">
+        <!--<a href="p3s-documentation" class="projects-item">
             <img src="img/projects/p3s-documentation/p3-script-documentation.png" alt="Postal3Script Documentation" class="project-image">
             <h3>Postal3Script Documentation</h3>
             <p>Comprehensive online documentation for Postal III's proprietary scripting language</p>
-        </a>
+        </a>-->
         <a href="p3s-vscode" class="projects-item">
             <img src="img/projects/p3s-vscode/project_thumbnail.png" alt="Postal3Script Language Support for VSCode" class="project-image">
             <h3>Postal3Script Language Support for VSCode</h3>
