--- a/p3s-documentation.html
+++ b/p3s-documentation.html
@@ -36,7 +36,7 @@
     <div class="button-container">
         <a href="https://whackjobint.github.io/postal3script/" target="_blank">
             <button class="button">
-                <i class="fa-solid fa-magnifying-glass"></i> Read Documentation
+                <i class="fa-solid fa-magnifying-glass"></i> Read Documentation!
             </button>
         </a> 
     </div>
