--- a/postal-iii-ultrapatch.html
+++ b/postal-iii-ultrapatch.html
@@ -39,7 +39,7 @@
     <div class="button-container">
         <a href="https://www.moddb.com/mods/postal-iii-ultrapatch">
             <button class="button">
-                <i class="fa-solid fa-wrench"></i> View On Moddb!
+                <i class="fa-solid fa-wrench"></i> View On Moddb...
             </button>
         </a>   
         <a href="p3-ultrapatch-changelog">
