--- a/taskyr.html
+++ b/taskyr.html
@@ -38,12 +38,12 @@
     <div class="button-container">
         <a href="https://github.com/Pseudonym-Tim/TASKYR">
             <button class="button">
-                <i class="fab fa-github"></i> View On Github
+                <i class="fab fa-github"></i> View On Github...
             </button>
         </a> 
         <a href="https://github.com/Pseudonym-Tim/TASKYR/releases/latest/download/TASKYR.zip">
             <button class="button">
-                <i class="fa fa-download"></i> Download
+                <i class="fa fa-download"></i> Download!
             </button>
         </a> 
     </div>
