--- a/unity-sprite-voxellator.html
+++ b/unity-sprite-voxellator.html
@@ -38,12 +38,12 @@
     <div class="button-container">
         <a href="https://github.com/Pseudonym-Tim/Unity-Sprite-Voxellator" target="_blank">
             <button class="button">
-                <i class="fab fa-github"></i> View On Github
+                <i class="fab fa-github"></i> View On Github...
             </button>
         </a> 
         <a href="https://github.com/Pseudonym-Tim/Unity-Sprite-Voxellator/archive/refs/tags/v1.0.zip">
             <button class="button">
-                <i class="fa fa-download"></i> Download
+                <i class="fa fa-download"></i> Download!
             </button>
         </a> 
     </div>
