--- a/betterfpcamera.html
+++ b/betterfpcamera.html
@@ -38,12 +38,12 @@
     <div class="button-container">
         <a href="https://github.com/Pseudonym-Tim/BetterFPCamera">
             <button class="button">
-                <i class="fab fa-github"></i> View On Github
+                <i class="fab fa-github"></i> View On Github...
             </button>
         </a> 
         <a href="https://mods.vintagestory.at/show/mod/14455">
             <button class="button">
-                <i class="fa fa-gear"></i> View On VSModDB
+                <i class="fa fa-gear"></i> View On VSModDB...
             </button>
         </a> 
     </div>
