--- a/p3s-vscode.html
+++ b/p3s-vscode.html
@@ -35,12 +35,12 @@
     <div class="button-container">
         <a href="https://github.com/Pseudonym-Tim/postal3script_vscode">
             <button class="button">
-                <i class="fab fa-github"></i> View On Github
+                <i class="fab fa-github"></i> View On Github...
             </button>
         </a> 
         <a href="https://github.com/Pseudonym-Tim/postal3script_vscode">
             <button class="button">
-                <i class="fa fa-download"></i> Download
+                <i class="fa fa-download"></i> Download!
             </button>
         </a> 
     </div>
