--- a/postal-onslaught.html
+++ b/postal-onslaught.html
@@ -43,12 +43,12 @@
     <div class="button-container">
         <a href="https://pseudotim.itch.io/postal-onslaught">
             <button class="button">
-                <i class="fab fa-itch-io"></i> View on itch.io
+                <i class="fab fa-itch-io"></i> View on itch.io...
             </button>
         </a> 
         <a href="downloads/POSTAL-Onslaught v1.0.zip">
             <button class="button">
-                <i class="fa fa-download"></i> Download v1.0
+                <i class="fa fa-download"></i> Download v1.0!
             </button>
         </a> 
     </div>
