New blog post, rewrite blog from 3-20-2025...

--- a/blog.html
+++ b/blog.html
@@ -30,6 +30,16 @@
     <p>Technical ramblings, project updates, horrible opinions, and a shocking lack of pie recipes...</p>
    <div class="blog-container">
         <div class="blog-item">
+            <u><h3>The Struggle to Finish</h3></u>
+            <i><p class="blog-meta"><u>Date:</u> April 30th, 2025</p></i>
+            <p>A self-reflection on why I struggle to finish indie games! Shiny Object Syndrome, ADHD, and the Missing Power of Deadline</p>
+            <a href="blogs/blog-(4-30-2025).html">
+                <button class="button" style="margin: auto;">
+                    <i class="fa-solid fa-book"></i> Read Blog...
+                </button>
+            </a> 
+        </div>
+        <div class="blog-item">
             <u><h3>Golf is Barely a Sport, and Mario Golf Proved It</h3></u>
             <i><p class="blog-meta"><u>Date:</u> March 20th, 2025</p></i>
             <p>An unfiltered rant attempting to expose golf’s fundamental flaws as a sport, through the supporting lens of my experience with Mario Golf: Super Rush</p>
