--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
         <div class="blog-item">
             <u><h3>The Struggle to Finish</h3></u>
             <i><p class="blog-meta"><u>Date:</u> April 30th, 2025</p></i>
-            <p>A self-reflection on why I struggle to finish indie games! Shiny Object Syndrome, ADHD, and the Missing Power of Deadline</p>
+            <p>A self-reflection on why I struggle to finish indie games! Shiny Object Syndrome, ADHD, and the absence of deadlines!</p>
             <a href="blogs/blog-(4-30-2025).html">
                 <button class="button" style="margin: auto;">
                     <i class="fa-solid fa-book"></i> Read Blog...
