Quick home page update...

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     <br>I also dabble in art and music from time to time, even if I don't consider myself particularly skilled in those areas.
     <br>I love writing code and fixing things, and I have a keen interest in computer hardware and electrical engineering as well.
     <br>Most of my time is spent working on games, mods, tools, and small experiments just for fun.
-    <br>I'm currently a member of <a href="https://x.com/WhackJob_Int">Whackjob Interactive</a>, an indie development team made up of people from all around the world!</p>
+    <br>I'm a member of <a href="https://x.com/WhackJob_Int">Whackjob Interactive</a>, an indie development team made up of people from all around the world!
+    <br>Currently working with a team on an unannounced JRPG called <strong>Project L.I.F.E</strong></p>
     
     <div class="skills-section">
         <h2>Skills</h2>
@@ -214,7 +215,7 @@
     <p>A collection of artwork, mostly low resolution digital paintings and pixel art...</p>
     <div class="art-container">
         <a class="art-item" target="_blank">
-            <img src="img/art/breaking_through.jpg" alt="Breaking Through" class="art-image">
+            <img src="img/art/why.png" alt="Funny Dog" style="max-width: 90%;" class="art-image">
         </a>
         <a class="art-item">
             <img src="img/art/deer_girl.jpg" alt="Deer Girl" style="max-width: 80%;" class="art-image">
