--- a/index.html
+++ b/index.html
@@ -81,9 +81,14 @@
             <p>A retro top-down arcade shooter set in the chaotic world of the POSTAL series!</p>
         </a>
         <a href="dog-petting-simulator" class="projects-item">
-            <img src="img/projects/dog-petting-simulator/dog-petting-simulator-1.png"  alt="DOG PETTING SIMULATOR" class="project-image">
+            <img src="img/projects/dog-petting-simulator/dog-petting-simulator-1.png" alt="DOG PETTING SIMULATOR" class="project-image">
             <h3>DOG PETTING SIMULATOR</h3>
             <p>A retro first person shooter where you break into people's houses and pet their dogs!</p>
+        </a>
+        <a href="project-life" class="projects-item">
+            <img src="img/projects/project-life/art_test.PNG" alt="PROJECT L.I.F.E" class="project-image">
+            <h3>Project L.I.F.E</h3>
+            <p>A classic JRPG experience featuring deep strategic combat and an emotionally rich story!</p>
         </a>
         <a href="taskyr" class="projects-item">
             <img src="img/projects/taskyr/taskyr-1.PNG" alt="TASKYR" class="project-image">
