Add Project L.I.F.E battle system math calculator
Also, just hide one of our dangling projects on home page

--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
             <h3>RONG</h3>
             <p>An action packed 2D rougelite top-down shooter mixed with elements of games like Breakout and Pinball</p>
         </a>
-        <a href="meow-miner" class="projects-item">
+        <!--<a href="meow-miner" class="projects-item">
             <img src="img/projects/meow-miner/meow-miner.png" alt="Meow Miner" class="project-image">
             <h3>Meow Miner</h3>
             <p>An arcade-style game featuring a cat protagonist with a penchant for underground mining</p>
-        </a>
+        </a>-->
         <a href="secrets-of-evermoore" class="projects-item">
             <img src="img/projects/secrets-of-evermoore/secrets-of-evermoore.png" alt="Secrets Of Evermoore" class="project-image">
             <h3>Secrets Of Evermoore</h3>
