Update build to fix issue?

--- a/games/EXCAVATOR/index.html
+++ b/games/EXCAVATOR/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGL Test.loader.js";
+      var loaderUrl = buildUrl + "/EXCAVATOR.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/WebGL Test.data.br",
-        frameworkUrl: buildUrl + "/WebGL Test.framework.js.br",
-        codeUrl: buildUrl + "/WebGL Test.wasm.br",
+        dataUrl: buildUrl + "/EXCAVATOR.data",
+        frameworkUrl: buildUrl + "/EXCAVATOR.framework.js",
+        codeUrl: buildUrl + "/EXCAVATOR.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Pseudonym_Tim",
         productName: "EXCAVATOR",
