--- a/games/EXCAVATOR/index.html
+++ b/games/EXCAVATOR/index.html
@@ -11,9 +11,8 @@
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=1024 height=768 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
-        <!--<div id="unity-logo"></div>-->
-        <div id="unity-logo">
-          <img src="game_icon.png" alt="Game Icon" style="width: 128px; height: auto;">
+        <div id="unity-logo" style="text-align: center;">
+          <img src="game_icon.png" alt="Game Icon" style="width: 128px; height: auto; display: inline-block;">
         </div>
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
