--- a/games/EXCAVATOR/index.html
+++ b/games/EXCAVATOR/index.html
@@ -6,8 +6,45 @@
     <title>Unity Web Player | EXCAVATOR</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <style>
+      #performance-warning
+      {
+        color: yellow;
+        text-align: center;
+        font-weight: bold;
+        margin-top: 10px;
+        font-family: sans-serif;
+      }
+
+      #changelog
+      {
+        position: fixed;
+        right: 20px;
+        top: 20px;
+        width: 280px;
+        background-color: #000;
+        color: #fff;
+        border-radius: 12px;
+        padding: 15px;
+        font-family: sans-serif;
+        font-size: 14px;
+        line-height: 1.5;
+        max-height: 90vh;
+        overflow-y: auto;
+      }
+
+      #changelog h3
+      {
+        margin-top: 0;
+        text-align: center;
+      }
+    </style>
   </head>
   <body style="background-color: #202020;">
+    <div id="performance-warning">
+      ⚠️ For the best experience, download the <strong>Windows build</strong> instead, it runs with significantly better performance!
+    </div>
+
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=1024 height=768 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
@@ -21,27 +58,36 @@
       <div id="unity-warning"> </div>
       <div id="unity-footer" style="display: none;"></div>
     </div>
+
+    <div id="changelog">
+      <h3>Test Changelog (11/8/2025)</h3>
+      <ul>
+        <li>Improved terrain rendering performance</li>
+        <li>Added particle effects for digging</li>
+        <li>Updated UI scaling for smaller screens</li>
+        <li>Fixed sound glitch on startup</li>
+      </ul>
+    </div>
+
     <script>
       var canvas = document.querySelector("#unity-canvas");
 
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
-      function unityShowBanner(msg, type) {
+      function unityShowBanner(msg, type)
+      {
         var warningBanner = document.querySelector("#unity-warning");
-        function updateBannerVisibility() {
+        function updateBannerVisibility()
+        {
           warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
         }
         var div = document.createElement('div');
         div.innerHTML = msg;
         warningBanner.appendChild(div);
         if (type == 'error') div.style = 'background: red; padding: 10px;';
-        else {
+        else
+        {
           if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
+          setTimeout(function()
+          {
             warningBanner.removeChild(div);
             updateBannerVisibility();
           }, 5000);
@@ -63,39 +109,17 @@
         showBanner: unityShowBanner,
       };
 
-      // By default, Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
-      // If you would like all file writes inside Unity Application.persistentDataPath
-      // directory to automatically persist so that the contents are remembered when
-      // the user revisits the site the next time, uncomment the following line:
-      // config.autoSyncPersistentDataPath = true;
-      // This autosyncing is currently not the default behavior to avoid regressing
-      // existing user projects that might rely on the earlier manual
-      // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
-      // expected to change.
-
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-
+      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent))
+      {
         var meta = document.createElement('meta');
         meta.name = 'viewport';
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
         document.querySelector("#unity-container").className = "unity-mobile";
         canvas.className = "unity-mobile";
-
-        // To lower canvas resolution on mobile devices to gain some
-        // performance, uncomment the following line:
-        // config.devicePixelRatio = 1;
-
-
-      } else {
-        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
+      }
+      else
+      {
         canvas.style.width = "1024px";
         canvas.style.height = "768px";
       }
@@ -104,18 +128,21 @@
 
       var script = document.createElement("script");
       script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
+      script.onload = () =>
+      {
+        createUnityInstance(canvas, config, (progress) =>
+        {
           document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
-              }).then((unityInstance) => {
-                document.querySelector("#unity-loading-bar").style.display = "none";
-              }).catch((message) => {
-                alert(message);
-              });
-            };
+        }).then((unityInstance) =>
+        {
+          document.querySelector("#unity-loading-bar").style.display = "none";
+        }).catch((message) =>
+        {
+          alert(message);
+        });
+      };
 
       document.body.appendChild(script);
-
     </script>
   </body>
 </html>
