--- a/games/EXCAVATOR/index.html
+++ b/games/EXCAVATOR/index.html
@@ -22,7 +22,7 @@
         right: 20px;
         top: 20px;
         width: 280px;
-        background-color: #000;
+        background-color: #00000035;
         color: #fff;
         border-radius: 12px;
         padding: 15px;
@@ -38,15 +38,54 @@
         margin-top: 0;
         text-align: center;
       }
+
+      #controls-panel
+      {
+        position: fixed;
+        left: 20px;
+        top: 80px;
+        width: 260px;
+        background-color: #00000035;
+        color: #fff;
+        border-radius: 12px;
+        padding: 15px;
+        font-family: sans-serif;
+        font-size: 14px;
+        line-height: 1.5;
+        max-height: 90vh;
+        overflow-y: auto;
+      }
+
+      #controls-panel h3
+      {
+        margin-top: 0;
+        text-align: center;
+      }
+
+      #controls-panel p
+      {
+        margin: 4px 0;
+      }
     </style>
   </head>
   <body style="background-color: #202020;">
     <div id="performance-warning">
-      ⚠️ For the best experience, download the <strong>Windows build</strong> instead, it runs with significantly better performance!
+      <u>⚠️ For the best experience, download the <strong>Windows build</strong> instead, it runs with significantly better performance!</u>
+    </div>
+
+    <!-- New Controls Section (left side) -->
+    <div id="controls-panel">
+      <u><h3>Controls</h3></u>
+      <p><strong>W / A / S / D</strong> – Move vehicle</p>
+      <p><strong>Mouse</strong> – Rotate camera</p>
+      <p><strong>Left Click</strong> – Dig / interact</p>
+      <p><strong>Space</strong> – Jump / brake</p>
+      <p><strong>Shift</strong> – Boost / precision mode</p>
+      <p><strong>Esc</strong> – Pause / menu</p>
     </div>
 
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=1024 height=768 tabindex="-1"></canvas>
+      <canvas id="unity-canvas" width="1024" height="768" tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo" style="text-align: center;">
           <img src="game_icon.png" alt="Game Icon" style="width: 128px; height: auto; display: inline-block;">
@@ -60,13 +99,12 @@
     </div>
 
     <div id="changelog">
-      <h3>Test Changelog (11/8/2025)</h3>
-      <ul>
-        <li>Improved terrain rendering performance</li>
-        <li>Added particle effects for digging</li>
-        <li>Updated UI scaling for smaller screens</li>
-        <li>Fixed sound glitch on startup</li>
-      </ul>
+      <u><h3>Test Changelog (11/8/2025)</h3></u>
+      <br>
+      <p>* Improved terrain rendering performance</p>
+      <p>+ Added particle effects for digging</p>
+      <p>* Updated UI scaling for smaller screens</p>
+      <p>* Fixed sound glitch on startup</p>
     </div>
 
     <script>
@@ -75,29 +113,42 @@
       function unityShowBanner(msg, type)
       {
         var warningBanner = document.querySelector("#unity-warning");
+
         function updateBannerVisibility()
         {
           warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
         }
+
         var div = document.createElement('div');
         div.innerHTML = msg;
         warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
+
+        if (type == 'error')
+        {
+          div.style = 'background: red; padding: 10px;';
+        }
         else
         {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+          if (type == 'warning')
+          {
+            div.style = 'background: yellow; padding: 10px;';
+          }
+
           setTimeout(function()
           {
             warningBanner.removeChild(div);
             updateBannerVisibility();
           }, 5000);
         }
+
         updateBannerVisibility();
       }
 
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/EXCAVATOR.loader.js";
-      var config = {
+
+      var config =
+      {
         arguments: [],
         dataUrl: buildUrl + "/EXCAVATOR.data",
         frameworkUrl: buildUrl + "/EXCAVATOR.framework.js",
@@ -106,7 +157,7 @@
         companyName: "Pseudonym_Tim",
         productName: "EXCAVATOR",
         productVersion: "1.0",
-        showBanner: unityShowBanner,
+        showBanner: unityShowBanner
       };
 
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent))
@@ -128,6 +179,7 @@
 
       var script = document.createElement("script");
       script.src = loaderUrl;
+
       script.onload = () =>
       {
         createUnityInstance(canvas, config, (progress) =>
