--- a/games/EXCAVATOR/index.html
+++ b/games/EXCAVATOR/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Web Player | EXCAVATOR</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <title>EXCAVATOR</title>
+    <!--<link rel="shortcut icon" href="TemplateData/favicon.ico">-->
     <link rel="stylesheet" href="TemplateData/style.css">
     <style>
       #performance-warning
